--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -24,8 +24,8 @@ eng:
         #>number: 'Numéro'
         parent: 'Parent' #!
         parent_id: 'Parent' #!
-        #>payment_modes: 'Modes de règlement'
-        #>payments: 'Règlements'
+        #>payment_modes: 'Modes d''encaissement'
+        #>payments: 'Encaissements'
         products: 'Products'
         #>purchase_order_lines: 'Lignes d''achat'
         updated_at: 'Updated at'
@@ -113,7 +113,7 @@ eng:
         creator_id: 'Creator'
         #>currency: 'Devise utilisée'
         #>currency_id: 'Devise utilisée'
-        #>embankments: 'Encaissements'
+        #>embankments: 'Remises en banque'
         #>entity: 'Personne'
         #>entity_id: 'Personne'
         #>iban: 'IBAN'
@@ -128,7 +128,8 @@ eng:
         #>nature: 'Nature'
         #>nature_label: 'Nature'
         #>number: 'Numéro de compte bancaire'
-        #>payment_modes: 'Modes de règlement'
+        #>purchase_payment_modes: 'Modes de décaissement'
+        #>sale_payment_modes: 'Modes d''encaissement'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
@@ -169,8 +170,8 @@ eng:
         #>districts: 'Zones administratives'
         #>document_templates: 'Modèles de document'
         #>documents: 'Documents'
-        #>embankable_payments: 'Règlements encaissables'
-        #>embankments: 'Encaissements'
+        #>embankable_payments: 'Encaissements encaissables'
+        #>embankments: 'Remises en banque'
         #>employees: 'employés'
         #>entities: 'Personnes'
         #>entity: 'Fiche personne'
@@ -205,8 +206,8 @@ eng:
         #>operation_natures: 'Types de travail'
         #>operations: 'Travaux'
         #>parameters: 'Paramètres'
-        #>payments_to_embank: 'Règlements à encaisser'
-        #>payments_to_embank_accounts: 'Comptes des règlements à encaisser'
+        #>payments_to_embank: 'Encaissements à encaisser'
+        #>payments_to_embank_accounts: 'Comptes des encaissements à encaisser'
         #>prices: 'Prix'
         #>product_components: 'Composants de produit'
         #>productable_products: 'Produits produisibles'
@@ -215,16 +216,16 @@ eng:
         #>professions: 'Professions'
         #>purchase_order_lines: 'Lignes d''achat'
         #>purchase_orders: 'Achats'
-        #>purchase_payment_modes: 'Modes de paiements'
-        #>purchase_payment_parts: 'Parties de paiements'
-        #>purchase_payments: 'Paiements'
+        #>purchase_payment_modes: 'Modes de décaissements'
+        #>purchase_payment_parts: 'Parties de décaissements'
+        #>purchase_payments: 'Décaissements'
         #>roles: 'Rôles'
         #>sale_order_lines: 'Lignes de vente'
         #>sale_order_natures: 'Types de vente'
         #>sale_orders: 'Ventes'
-        #>sale_payment_modes: 'Modes de règlement'
-        #>sale_payment_parts: 'Parties de règlement'
-        #>sale_payments: 'Règlements'
+        #>sale_payment_modes: 'Modes d''encaissement'
+        #>sale_payment_parts: 'Parties d''encaissement'
+        #>sale_payments: 'Encaissements'
         #>sales_conditions: 'Conditions Générales de Vente'
         #>self_bank_accounts: 'Comptes bancaires en propre'
         #>self_cashes: 'Caisses en propre'
@@ -253,8 +254,8 @@ eng:
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
-        #>usable_purchase_payments: 'Paiements utilisables'
-        #>usable_sale_payments: 'Règlements utilisables'
+        #>usable_purchase_payments: 'Décaissements utilisables'
+        #>usable_sale_payments: 'Encaissements utilisables'
         #>users: 'Utilisateurs'
       complement:
         #>active: 'Actif'
@@ -581,11 +582,11 @@ eng:
         #>journal_records: 'Pièces comptables'
         lock_version: 'Version'
         #>locked: 'Verrouillé'
-        #>mode: 'Type de règlement'
-        #>mode_id: 'Type de règlement'
+        #>mode: 'Type d''encaissement'
+        #>mode_id: 'Type d''encaissement'
         #>number: 'Numéro'
-        #>payments: 'Règlements'
-        #>payments_count: 'Nb. règlements'
+        #>payments: 'Encaissements'
+        #>payments_count: 'Nb. encaissements'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
@@ -595,7 +596,7 @@ eng:
         #>attorney: 'Mandataire'
         #>attorney_account: 'Compte mandataire associé'
         #>attorney_account_id: 'Compte mandataire associé'
-        #>authorized_payments_count: 'Nombre de règlements autorisés'
+        #>authorized_payments_count: 'Nombre d''encaissements autorisés'
         #>born_on: 'Date de naissance'
         #>cashes: 'Comptes bancaires'
         #>category: 'Catégorie'
@@ -641,23 +642,23 @@ eng:
         #>nature_id: 'Type'
         #>observations: 'Observations'
         #>origin: 'Lieu de la première rencontre'
-        #>payment_delay: 'Délai de règlement'
-        #>payment_delay_id: 'Délai de règlement'
-        #>payment_mode: 'Mode de règlement'
-        #>payment_mode_id: 'Mode de règlement'
+        #>payment_delay: 'Délai d''encaissement'
+        #>payment_delay_id: 'Délai d''encaissement'
+        #>payment_mode: 'Mode d''encaissement'
+        #>payment_mode_id: 'Mode d''encaissement'
         #>photo: 'Photo'
         #>prices: 'Prix'
         #>proposer: 'Parrain'
         #>proposer_id: 'Parrain'
         #>prospect: 'Prospect'
         #>purchase_orders: 'Achats'
-        #>purchase_payments: 'Paiements'
+        #>purchase_payments: 'Décaissements'
         #>reduction_rate: 'Taux de réduction'
         #>reflation_submissive: 'Soumis à la relance'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>sale_orders: 'Ventes'
-        #>sale_payments: 'Règlements'
+        #>sale_payments: 'Encaissements'
         #>salt: 'Sel'
         #>siren: 'Code SIREN'
         #>soundex: 'Soundex'
@@ -670,7 +671,7 @@ eng:
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
-        #>usable_sale_payments: 'Règlements utilisables'
+        #>usable_sale_payments: 'Encaissements utilisables'
         #>vat_number: 'Numéro de TVA intra-communautaire'
         #>vat_submissive: 'Soumis à la TVA'
         #>webpass: 'Mot de passe web'
@@ -898,8 +899,8 @@ eng:
         #>origin: 'Facture d''origine'
         #>origin_id: 'Facture d''origine'
         #>paid: 'Réglée'
-        #>payment_delay: 'Délai de règlement'
-        #>payment_delay_id: 'Délai de règlement'
+        #>payment_delay: 'Délai d''encaissement'
+        #>payment_delay_id: 'Délai d''encaissement'
         #>payment_on: 'A régler au plus tard le'
         #>products: 'Produits'
         #>sale_order: 'Vente'
@@ -1020,13 +1021,13 @@ eng:
         #>number: 'Numéro'
         #>position: 'Position'
         #>printed_on: 'Datée du'
-        #>purchase_payment_parts: 'Parties de paiement'
-        #>purchase_payments: 'Paiements'
+        #>purchase_payment_parts: 'Parties de décaissement'
+        #>purchase_payments: 'Décaissements'
         #>resource: 'Origine'
         #>resource_id: 'Origine'
         #>resource_type: 'Origine'
-        #>sale_payment_parts: 'Parties de règlement'
-        #>sale_payments: 'Règlements'
+        #>sale_payment_parts: 'Parties d''encaissement'
+        #>sale_payments: 'Encaissements'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
@@ -1434,7 +1435,7 @@ eng:
         #>number: 'Numéro'
         #>parts_amount: 'Montant utilisé'
         #>payee: 'Bénéficiaire'
-        #>payment_parts: 'Parties de règlement'
+        #>payment_parts: 'Parties de décaissement'
         #>planned_on: 'Réception prévue le'
         #>products: 'Produits'
         quantity: 'Quantity'
@@ -1486,13 +1487,13 @@ eng:
         #>created_on: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
-        #>delivered: '(((DELIVERED)))'
+        #>delivered: 'Remis au bénéficiaire'
         #>id: 'ID'
         #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
-        #>mode: 'Mode de règlement'
-        #>mode_id: 'Mode de règlement'
+        #>mode: 'Mode d''encaissement'
+        #>mode_id: 'Mode d''encaissement'
         #>number: 'Numéro'
         #>paid_on: 'Payé le'
         #>parts: 'Parts'
@@ -1517,11 +1518,11 @@ eng:
         #>id: 'ID'
         #>lock_version: 'Version'
         #>name: 'Nom'
-        #>payments: 'Règlements'
+        #>payments: 'Décaissements'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
-        #>with_accounting: 'Comptabiliser les règlements'
+        #>with_accounting: 'Comptabiliser les encaissements'
       purchase_payment_part:
         #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant'
@@ -1537,9 +1538,9 @@ eng:
         #>journal_record: 'Pièces comptables'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
-        #>payment: 'Règlement'
-        #>payment_id: 'Règlement'
-        #>payment_way: 'Mode de règlement'
+        #>payment: 'Décaissement'
+        #>payment_id: 'Décaissement'
+        #>payment_way: 'Mode de décaissement'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
@@ -1603,9 +1604,9 @@ eng:
         #>number: 'Numéro'
         #>parts_amount: 'Montant payé'
         #>payer: 'Payeur'
-        #>payment_delay: 'Délai de règlement'
-        #>payment_delay_id: 'Délai de règlement'
-        #>payment_parts: 'Parties de règlement'
+        #>payment_delay: 'Délai d''encaissement'
+        #>payment_delay_id: 'Délai d''encaissement'
+        #>payment_parts: 'Parties d''encaissement'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>state: 'État'
@@ -1681,11 +1682,11 @@ eng:
         id: 'ID'
         lock_version: 'Version'
         name: 'Name'
-        #>payment_delay: 'Délai de règlement'
-        #>payment_delay_id: 'Délai de règlement'
-        #>payment_mode: 'Mode de règlement'
-        #>payment_mode_complement: 'Complément d''information sur le mode règlement'
-        #>payment_mode_id: 'Mode de règlement'
+        #>payment_delay: 'Délai d''encaissement'
+        #>payment_delay_id: 'Délai d''encaissement'
+        #>payment_mode: 'Mode d''encaissement'
+        #>payment_mode_complement: 'Complément d''information sur le mode d''encaissement'
+        #>payment_mode_id: 'Mode d''encaissement'
         #>sale_orders: 'Ventes'
         updated_at: 'Updated at'
         updater: 'Updater'
@@ -1704,17 +1705,17 @@ eng:
         creator_id: 'Creator'
         #>embanker: 'Responsable'
         #>embanker_id: 'Responsable'
-        #>embankment: 'Encaissement'
-        #>embankment_id: 'Encaissement'
+        #>embankment: 'Remise en banque'
+        #>embankment_id: 'Remise en banque'
         id: 'ID'
         #>journal_record: 'Pièces comptables'
         #>journal_record_id: 'Pièce comptable'
         lock_version: 'Version'
-        #>mode: 'Mode de règlement'
-        #>mode_id: 'Mode de règlement'
+        #>mode: 'Mode d''encaissement'
+        #>mode_id: 'Mode d''encaissement'
         #>number: 'Numéro'
         #>paid_on: 'Réglé le'
-        #>parts: 'Parties de règlement'
+        #>parts: 'Parties d''encaissement'
         #>parts_amount: 'Montant utilisé'
         #>payer: 'Payeur'
         #>payer_id: 'Payeur'
@@ -1739,19 +1740,19 @@ eng:
         created_at: 'Created at'
         creator: 'Creator'
         creator_id: 'Creator'
-        #>embankable_payments: 'Règlements encaissables'
-        #>embankables_account: 'Compte d''attente pour les règlements à encaisser'
-        #>embankables_account_id: 'Compte d''attente pour les règlements à encaisser'
+        #>embankable_payments: 'Encaissements encaissables'
+        #>embankables_account: 'Compte d''attente pour les encaissements à encaisser'
+        #>embankables_account_id: 'Compte d''attente pour les encaissements à encaisser'
         #>entities: 'Personnes'
         id: 'ID'
         lock_version: 'Version'
         name: 'Name'
-        #>payments: 'Règlements'
+        #>payments: 'Encaissements'
         #>published: 'Publié'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
-        #>with_accounting: 'Comptabiliser les règlements'
+        #>with_accounting: 'Comptabiliser les encaissements'
         #>with_commission: 'Inclure une commission'
         #>with_embankment: 'Utiliser les remises en banque'
       sale_payment_part:
@@ -1770,9 +1771,9 @@ eng:
         #>journal_record: 'Pièces comptables'
         #>journal_record_id: 'Pièce comptable'
         lock_version: 'Version'
-        #>payment: 'Règlement'
-        #>payment_id: 'Règlement'
-        #>payment_way: 'Mode de règlement'
+        #>payment: 'Encaissement'
+        #>payment_id: 'Encaissement'
+        #>payment_way: 'Mode d''encaissement'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
@@ -2117,7 +2118,7 @@ eng:
         lock_version: 'Version'
         #>parts_amount: 'Montant payé'
         #>payer: 'Payeur'
-        #>payment_parts: 'Parties de règlement'
+        #>payment_parts: 'Parties d''encaissement'
         #>started_on: 'Débuté le'
         #>stopped_on: 'Fini le'
         #>supplier: 'Fournisseur'
@@ -2336,7 +2337,7 @@ eng:
       district: 'District'
       #>document: 'Document'
       #>document_template: 'Modèle de document'
-      #>embankment: 'Encaissement'
+      #>embankment: 'Remise en banque'
       #>entity: 'Personne'
       #>entity_category: 'Catégorie de personne'
       #>entity_link: 'Lien de personne'
@@ -2369,16 +2370,16 @@ eng:
       #>profession: 'Profession'
       #>purchase_order: 'Achat'
       #>purchase_order_line: 'Ligne d''achat'
-      #>purchase_payment: 'Paiement'
-      #>purchase_payment_mode: 'Mode de paiement'
-      #>purchase_payment_part: 'Affectation de paiement'
+      #>purchase_payment: 'Décaissement'
+      #>purchase_payment_mode: 'Mode de décaissement'
+      #>purchase_payment_part: 'Affectation de décaissement'
       #>role: 'Rôle'
       #>sale_order: 'Vente'
       #>sale_order_line: 'Ligne de vente'
       #>sale_order_nature: 'Type de vente'
-      #>sale_payment: 'Règlement'
-      #>sale_payment_mode: 'Mode de règlement'
-      #>sale_payment_part: 'Affectation de règlement'
+      #>sale_payment: 'Encaissement'
+      #>sale_payment_mode: 'Mode d''encaissement'
+      #>sale_payment_part: 'Affectation d''encaissement'
       #>sequence: 'Séquence'
       #>shape: 'Îlot'
       #>shelf: 'Catégorie de produit'
@@ -2416,7 +2417,7 @@ eng:
       #>district: 'Zones administratives'
       #>document: 'Documents'
       #>document_template: 'Modèles de document'
-      #>embankment: 'Encaissements'
+      #>embankment: 'Remises en banque'
       #>entity: 'Personnes'
       #>entity_category: 'Catégories de personne'
       #>entity_link: 'Liens de personne'
@@ -2449,16 +2450,16 @@ eng:
       #>profession: 'Professions'
       #>purchase_order: 'Achats'
       #>purchase_order_line: 'Lignes d''achat'
-      #>purchase_payment: 'Paiements'
-      #>purchase_payment_mode: 'Modes de paiement'
-      #>purchase_payment_part: 'Parties de paiement'
+      #>purchase_payment: 'Décaissements'
+      #>purchase_payment_mode: 'Modes de décaissement'
+      #>purchase_payment_part: 'Parties de décaissement'
       role: 'Roles'
       #>sale_order: 'Ventes'
       #>sale_order_line: 'Lignes de vente'
       #>sale_order_nature: 'Types de vente'
-      #>sale_payment: 'Règlements'
-      #>sale_payment_mode: 'Modes de règlement'
-      #>sale_payment_part: 'Parties de règlement'
+      #>sale_payment: 'Encaissements'
+      #>sale_payment_mode: 'Modes d''encaissement'
+      #>sale_payment_part: 'Parties d''encaissement'
       #>sequence: 'Séquences'
       #>shape: 'Îlots'
       shelf: 'Shelves'
