Change journal_record comportment and add balance
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1544 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -113,6 +113,7 @@ eng:
     #>record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement.'
     #>record_has_not_been_removed: 'L''enregistrement n''a pu être supprimé.'
     #>reflect: 'Refléter'
+    #>refresh: 'Rafraîchir'
     #>reopen: 'Déclôturer'
     #>save: 'Enregistrer'
     #>search: 'Rechercher'
