--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -1346,6 +1346,7 @@ fra:
         entries: 'Écritures'
         financialyear: 'Exercices'
         id: 'ID'
+        invoices: 'Factures'
         journal: 'Journal'
         journal_id: 'Journal'
         lock_version: 'Version'
