--- a/config/locales/jpn/pack.accountancy.yml
+++ b/config/locales/jpn/pack.accountancy.yml
@@ -57,6 +57,20 @@ jpn:
         #>account_number: 'Numéro de compte '
         #>no_accounts: 'Il n''existe pas de compte commençant par ce numéro.'
       accounts_letter_launch:
+      balance:
+        #>account_name: 'Compte comptable'
+        #>account_number: 'N°Compte'
+        #>accounts: 'Comptes comptables utilisés'
+        #>balance: 'Solde'
+        #>closed: 'Verrouillées'
+        #>confirmed: 'Confirmées'
+        #>down_to_level: 'Détailler jusqu''au niveau'
+        #>draft: 'Brouillard'
+        #>journal_entries_states: 'États des écritures utilisées'
+        #>subtotal: 'Sous-total {{name}}'
+        #>subtotals_at_level: 'Sous-totaux aux niveaux'
+        #>title: 'Balance'
+        #>total: 'Total'
       bank_account_statement:
       bank_account_statement_point:
       bank_account_statements:
@@ -200,9 +214,9 @@ jpn:
         #>journal_name: 'Nom du journal'
       _journals_search:
         #>filter_entries_with: 'Filtrer les écritures avec'
-        #>interval: 'Intervalle'
+        #>interval: 'Intervalle personnalisé'
         #>manual_period: 'du {{start}} au {{finish}}'
-        #>period: 'Période'
+        #>period: 'Période prédéfinie'
       lettering:
         #>lettering_account_client: 'Lettrage des comptes clients'
         #>lettering_account_supplier: 'Lettrage des comptes fournisseurs'
