--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -106,6 +106,7 @@ fra:
     record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement.'
     record_has_not_been_removed: 'L''enregistrement n''a pu être supprimé.'
     reflect: 'Refléter'
+    refresh: 'Rafraîchir'
     reopen: 'Déclôturer'
     save: 'Enregistrer'
     search: 'Rechercher'
